Fixed inputs style and alignments

--- a/styles/app.css
+++ b/styles/app.css
@@ -56,7 +56,7 @@ nav div {
 }
 
 .form {
-    width: 30vw;
+    width: 350px;
     height: 40vh;
     padding: 1em;
     display: flex;
@@ -75,22 +75,33 @@ nav div {
 }
 
 .form div:nth-last-of-type(1) {
+    justify-content: center;
     border-radius: 5px;
     text-align: center;
     background-color: green;
     width: 50%;
     height: 5vh;
+    cursor: pointer;
 }
 
 i {
     align-self: flex-end;
     color: var(--tertiary-color);
+    margin-bottom: 0.7em;
+    cursor: pointer;
 }
 
 input {
-    width: 100%;
+    width: 95%;
     height: 5vh;
     border-radius: 5px;
+    padding: 0.5em;
+}
+
+input[submit] {
+    color: white;
+    background-color: #90B8F8;
+
 }
 
 .translate {
